--- a/static/stylesheets/general.css
+++ b/static/stylesheets/general.css
@@ -1,6 +1,6 @@
 :root {
-	--light-bg: #fff7f7;
-	--light-bg-r: 255;
+	--light-bg: #f7f7f7;
+	--light-bg-r: 247;
 	--light-bg-g: 247;
 	--light-bg-b: 247;
 	--light-bg-a: 0.6;
@@ -66,7 +66,7 @@ body {
 	max-width: 1280px;
 }
 
-.mx-auto { margin-left: auto; margin-right: auto; }
-
 .px-16 { padding-left: 16px; padding-right: 16px; }
 .px-8 { padding-left: 8px; padding-right: 8px; }
+
+.mx-auto { margin-left: auto; margin-right: auto; }
